src/objects/Apttus_Config2__TempObject__c.object
<CustomObject>
    <description>A container for temporary objects used by the application</description>
    <fields>
        <fullName>Apttus_Config2__AssetCache__c</fullName>
        <description>The asset cache</description>
        <inlineHelpText>The asset cache</inlineHelpText>
        <label>Asset Cache</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__AssetDataCache__c</fullName>
        <description>The asset data cache</description>
        <inlineHelpText>The asset data cache</inlineHelpText>
        <label>Asset Data Cache</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__CartCache__c</fullName>
        <description>The cart cache</description>
        <inlineHelpText>The cart cache</inlineHelpText>
        <label>Cart Cache (Deprecated)</label>
        <length>128000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__ConfigurationId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>ID of the associated configuration</description>
        <label>Configuration</label>
        <referenceTo>Apttus_Config2__ProductConfiguration__c</referenceTo>
        <relationshipName>TempObjects</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__Data__c</fullName>
        <description>Temporary data</description>
        <label>Data</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__DeveloperName__c</fullName>
        <description>The object name</description>
        <label>Developer Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__LocationCache__c</fullName>
        <description>The location cache</description>
        <label>Location Cache</label>
        <length>2000</length>
        <type>LongTextArea</type>
    </fields>
    <label>Temp Object  (CPQ)</label>
    <nameField>
        <displayFormat>TO-{0000000000}</displayFormat>
        <label>Temp Object Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Temp Objects (CPQ)</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>